--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -6,5 +6,5 @@ footer{
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0px 60px;
+    padding: 10px 60px;
 }
